--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ Compiled/*
 bin/*
 obj/*
 packages/*
+PluginLauncher/*
 
 #Files to ignore
 *.pdb
@@ -12,3 +13,4 @@ VMS.TPS.Common.Model.API.xml
 VMS.TPS.Common.Model.Types.dll
 VMS.TPS.Common.Model.Types.xml
 *.p7s
+
