--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,6 @@
   <package id="OxyPlot.Core" version="2.1.0" targetFramework="net45" />
   <package id="OxyPlot.Wpf" version="2.1.0" targetFramework="net45" />
   <package id="OxyPlot.Wpf.Shared" version="2.1.0" targetFramework="net45" />
+  <package id="Serilog" version="2.10.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net452" />
 </packages>
