--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net452" />
+  <package id="Fody" version="6.6.4" targetFramework="net452" developmentDependency="true" />
+  <package id="gong-wpf-dragdrop" version="2.4.3" targetFramework="net452" />
   <package id="OxyPlot.Core" version="2.1.0" targetFramework="net45" />
   <package id="OxyPlot.Wpf" version="2.1.0" targetFramework="net45" />
   <package id="OxyPlot.Wpf.Shared" version="2.1.0" targetFramework="net45" />
+  <package id="PropertyChanged.Fody" version="4.1.0" targetFramework="net452" />
   <package id="Serilog" version="2.10.0" targetFramework="net452" />
   <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
