--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="Costura.Fody" version="4.1.0" targetFramework="net452" />
   <package id="Fody" version="6.6.4" targetFramework="net452" developmentDependency="true" />
   <package id="gong-wpf-dragdrop" version="2.4.3" targetFramework="net452" />
+  <package id="HtmlToXamlConverter" version="1.0.5727.24510" targetFramework="net452" />
   <package id="OxyPlot.Core" version="2.1.0" targetFramework="net45" />
   <package id="OxyPlot.Wpf" version="2.1.0" targetFramework="net45" />
   <package id="OxyPlot.Wpf.Shared" version="2.1.0" targetFramework="net45" />
