--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="4.1.0" targetFramework="net452" />
+  <package id="Expression.Interaction" version="3.0.40218.0" targetFramework="net452" />
   <package id="Fody" version="6.6.4" targetFramework="net452" developmentDependency="true" />
   <package id="gong-wpf-dragdrop" version="2.4.3" targetFramework="net452" />
   <package id="HtmlToXamlConverter" version="1.0.5727.24510" targetFramework="net452" />
