--- a/EQD2Converter.csproj
+++ b/EQD2Converter.csproj
@@ -120,13 +120,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AlphaBetaMapping.cs" />
+    <Compile Include="StructureViewModel.cs" />
     <Compile Include="Converters.cs" />
     <Compile Include="DelegateCommand.cs" />
     <Compile Include="DescriptionView.xaml.cs" />
-    <Compile Include="DVHWindow.xaml.cs">
-      <DependentUpon>DVHWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="EQD2ConverterConfig.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Helpers.cs" />
@@ -140,12 +137,6 @@
     <Compile Include="Model.cs" />
     <Compile Include="ObservableObject.cs" />
     <Compile Include="OnlineHelpDefinitions.cs" />
-    <Compile Include="PlanNameWindow.xaml.cs">
-      <DependentUpon>PlanNameWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="PreviewWindow.xaml.cs">
-      <DependentUpon>PreviewWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Script.cs" />
     <Compile Include="ViewModel.cs" />
     <Compile Include="WaitingWindow.xaml.cs">
@@ -176,15 +167,15 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <EmbeddedResource Include="Resources\StructureCodes.csv" />
+    <None Include="Schemas\EQD2ConverterConfig.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Schemas\StructureCodes.csv" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="DescriptionView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="DVHWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="HelpWindow.xaml">
       <SubType>Designer</SubType>
@@ -194,24 +185,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PlanNameWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="PreviewWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="WaitingWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="image_asc.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="image_asc6.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="ESAPIWorker\ESAPI.csproj">
@@ -232,7 +209,9 @@
     <Resource Include="Resources\align.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Configuration\EQD2ConverterConfig.xml" />
+    <Content Include="Configuration\EQD2ConverterConfig.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\align_grey.png" />
