Consolidated resource dictionary, tested force conversoin optoins in XML

--- a/EQD2Converter.csproj
+++ b/EQD2Converter.csproj
@@ -189,6 +189,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="XAMLDictionary.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="ESAPIWorker\ESAPI.csproj">
