--- a/EQD2Converter.csproj
+++ b/EQD2Converter.csproj
@@ -226,6 +226,7 @@
     <Resource Include="Resources\circle-info-solid.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Docs\DoseConverter_BASE.png" />
     <Content Include="OnlineHelp\OnlineHelp.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -236,6 +237,7 @@
   <ItemGroup>
     <Resource Include="Resources\exclamation_light.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Fody.6.6.4\build\Fody.targets" Condition="Exists('packages\Fody.6.6.4\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
