--- a/DoseConverter.csproj
+++ b/DoseConverter.csproj
@@ -8,8 +8,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{CEE30CDD-E864-4EC0-9F11-F070B578F782}</ProjectGuid>
     <OutputType>library</OutputType>
-    <RootNamespace>EQD2Converter</RootNamespace>
-    <AssemblyName>EQD2Converter.esapi</AssemblyName>
+    <RootNamespace>DoseConverter</RootNamespace>
+    <AssemblyName>DoseConverter.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
